# 20gr560

./: .gitmodules  LICENSE  README.md  localacc.txt  rosbridge
ForMarco/: papito.pgm  papito.yaml
golf_odom/: CMakeLists.txt
golf_odom/src/: golf_odom.cpp
install/: local_setup.sh  setup.sh
install/tpod_driver/share/tpod_driver/: package.bash  package.dsv  package.sh
laser_ws/src/hector_slam/hector_mapping/launch/: mapping_lms.launch
laser_ws/src/hector_slam/hector_slam_launch/launch/: tutorial.launch
laser_ws/src/hector_slam/launch/: tim551.launch
laser_ws/src/ira_laser_tools/launch/: config.yaml  laserscan_virtualizer.launch
laser_ws/src/laser_data/: CMakeLists.txt  package.xml
laser_ws/src/laser_data/launch/: scanner.launch  twolasers.rviz
laser_ws/src/laser_data/src/: global.h  odom_merge.cpp  scanner1.cpp  tfe.cpp
laser_ws/src/lms1xx/launch/: LMS1xx.launch
laser_ws/src/lms1xx/src/: quadtree.h
laser_ws/src/navigation/costmap_2d/launch/: copy.launch
laser_ws/src/path_planner/: CMakeLists.txt
laser_ws/src/path_planner/cfg/carlike/: costmap_common_params.yaml
laser_ws/src/path_planner/maps/: map.odg  map.yaml  parking_lot (copy).odg  parking_lot.odg  parking_lot.xcf  parking_lot.yaml
laser_ws/src/path_planner/maps/1000x1000/: parking_lot.yaml
laser_ws/src/path_planner/stage/: map.world
laser_ws/src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
laser_ws/src/sick_tim/launch/: sick_tim551_2050001.launch
laser_ws/src/sick_tim/src/: sick_tim_common.cpp
laser_ws/src/teb_local_planner_tutorials/: CMakeLists.txt  package.xml
laser_ws/src/teb_local_planner_tutorials/cfg/carlike/: costmap_common_params.yaml
laser_ws/src/teb_local_planner_tutorials/maps/: maze.yaml
laser_ws/src/teb_local_planner_tutorials/scripts/: tfez.cpp
laser_ws/src/tpod_driver/: tpod.launch
laser_ws/src/tpod_driver/launch/: tpod_driver.launch
laser_ws/src/tpod_driver/src/: odom_for_Arduino.cpp
log/: latest_build
parking_spot_detector/: CMakeLists.txt  package.xml
parking_spot_detector/src/: detector.cpp
path_planner/: CMakeLists.txt  package.xml
path_planner/launch/: park_simulation.launch
path_planner/scripts/: park_planner.py  publish_test_obstacles.py
ros1/: README.md  slammap.pgm  slammap.yaml  test
ros1/src/beginner_tutorials/: CMakeLists.txt  package.xml
ros1/src/hector_slam/hector_mapping/launch/: mapping_tim.launch
ros1/src/ira_laser_tools/launch/: laserscan_multi_merger.launch
ros1/src/lms1xx/: CMakeLists.txt
ros1/src/lms1xx/launch/: LMS1xx.launch
ros1/src/lms1xx/src/: LMS1xx_node.cpp  lmspub.cpp
ros1/src/path_planner/launch/: real_park.launch  simulation_park.launch
ros1/src/path_planner/maps/: parking_lot.pgm
ros1/src/path_planner/scripts/: sender.py
ros1/src/path_planner/stage/: parking_lot.world
ros1/src/sick_tim/launch/: sick_tim551_2050001.launch
ros1/src/tim551/: CMakeLists.txt  README.md  package.xml
ros1/src/tim551/launch/: scanner.launch  scanner.rviz  twolasers.rviz
ros1/src/tim551/msg/: floater.msg
ros1/src/tim551/src/: avgsub.cpp  global.h  scanner1.cpp  test1.cpp  tfe.cpp
ros1/src/tpod_driver/: CMakeLists.txt  README.md  package.xml  tpod.urdf
ros1/src/tpod_driver/src/: control.cpp  odom.cpp  tf_broadcast.cpp
ros2/: README.md  index.html
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build  latest_test
ros2/src/subpub/: CMakeLists.txt  package.xml
ros2/src/subpub/launch/: ros2scanner_launch.py  scanconfig.rviz
ros2/src/subpub/src/: global.h  listener.cpp  scanner.cpp  talker.cpp
ros_bridge/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_bridge/log/: latest_build  latest_test
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros_ws/log/: latest_build
ros_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/log/: latest_build
ros_ws/src/manual_input_controller/: CMakeLists.txt
ros_ws/src/manual_input_controller/src/: manual_input.cpp
ros_ws/src/ros2_tpod/: CMakeLists.txt
ros_ws/src/ros2_tpod/src/: ros2_tpod.cpp
ros_ws/src/tpod_driver-master/: CMakeLists.txt  LICENSE  README.md
ros_ws/src/tpod_driver-master/src/: tpod_driver.cpp
rs_parking/: CMakeLists.txt  package.xml
rs_parking/src/: recorder_node.cpp  rs_parking_node.cpp
simulation/src/gazebo/: README.md
simulation/src/rviz/: README.md
simulation/src/urdf/: LM151.xacro
simulation_ws/src/cart_sim/: CMakeLists.txt  package.xml
simulation_ws/src/cart_sim/launch/: cart_world.launch  config.rviz  rviz.launch  spawn.launch  world.launch
simulation_ws/src/cart_sim/meshes/: LMS111.dae  ZED.dae  golfcar.dae
simulation_ws/src/cart_sim/urdf/: box.urdf  cart_model.urdf  cart_model.xacro  cart_standalone.xacro
simulation_ws/src/cart_sim/worlds/: test_world.world
workspaces/melodic/: static_odometry_error_linear_log.csv  static_odometry_error_linear_log_saved.csv  vel_turn_acc_log.csv  vel_turn_acc_log1.csv  vel_turn_acc_log2.csv  vel_turn_acc_log3.csv  vel_turn_acc_log_fixed_1.5.csv  vel_turn_acc_log_fixed_1.csv  vel_turn_acc_log_fixed_2.5.csv  vel_turn_acc_log_fixed_2.csv  vel_turn_acc_log_fixed_3.csv  vel_turn_acc_log_press1_1.csv  vel_turn_acc_log_press1_5.csv  vel_turn_acc_log_press2.csv  vel_turn_acc_log_press2_5.csv  vel_turn_acc_log_press3.csv
workspaces/melodic/devel/: .catkin  local_setup.sh  setup.sh
workspaces/melodic/src/golf_odom/: CMakeLists.txt  package.xml
workspaces/melodic/src/loggers/: CMakeLists.txt  package.xml
workspaces/melodic/src/realsense/: CMakeLists.txt  package.xml
workspaces/melodic/src/realsense/src/: pose_tracker.cpp  rotation_tracker.cpp
workspaces/melodic/src/tpod_teleop/: CMakeLists.txt  package.xml
workspaces/noetic/path_planner/: CMakeLists.txt  README.md
workspaces/noetic/path_planner/cfg/: amcl_params.yaml
workspaces/noetic/path_planner/launch/: real_park.launch
workspaces/noetic/path_planner/maps/: parking_lot.yaml
workspaces/noetic/path_planner/scripts/: park_planner.py
workspaces/noetic/path_planner/stage/: parking_lot.world
(+125 files in other folders)
