<?xml version="1.0"?>
<package format="2">
  <name>laser_data</name>
  <version>0.0.0</version>
  <description>The laser_data package</description>

  <maintainer email="vdrusk18@student.aau.dk">valdas</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>libusb-1.0-dev</build_export_depend>
  
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>


  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
